# arbiter

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
deploy/: Dockerfile  com.holdmyagent.arbiter.plist  docker-compose.yml  holdmyagent.service
docs/: README.md  agent-hook.md  api.md  apns.md  architecture.md  claude-code-hook.md  cli.md  config.md  deploy-docker.md  deploy-launchd.md  deploy-nginx.md  deploy-systemd.md  deploy-tailscale.md  enforcement-models.md  ntfy.md  quickstart.md  reference-sandboxed-agent.md  sdk.md  secret-managers.md  warden.md  webhooks.md
docs/img/: system.d2
docs/specs/: 2026-07-06-warden-enforcement-GOAL.md  (+5 more)
scripts/: demo-seed.py  smoke-multitenant.sh  smoke-warden.sh  smoke.sh
sdk/: CHANGELOG.md  README.md  pyproject.toml  requirements-dev.txt
sdk/hold_sdk/: __init__.py  client.py
sdk/tests/: test_client.py  test_exports.py  test_policy_client.py  test_request_approval.py
server/: README.md  pyproject.toml
server/arbiter/: apns.py  app.py  auth.py  cli.py  config.py  control.py  db.py  enroll.py  errors.py  gate_policy.py  main.py  models.py  obslog.py  pair.py  policy.py  provisioning.py  registry.py  scheduler.py  signing.py  step_up.py  stream.py
server/arbiter/notify/: __init__.py  apns.py  ntfy.py  outbox.py  webhook.py
server/arbiter/web/: __init__.py
server/arbiter/web/static/: dashboard.js  tokens.css
server/arbiter/web/templates/: _request_rows.html  audit.html  base.html  devices.html  login.html  pair.html  request_detail.html  requests.html  settings.html
server/tests/: _stream_fakes.py  conftest.py  test_acquire_escapes.py  test_api.py  test_apns.py  test_app_wiring.py  test_audit_export.py  test_auth.py  test_backcompat.py  test_backup_restore.py  test_cell_delivery.py  test_cell_signer.py  test_cli.py  test_cli_pair_code.py  test_cli_tenant.py  test_cli_token.py  test_cli_token_tenant.py  test_config.py  test_config_trusted.py  test_consume.py  test_control.py  test_correctness.py  test_dashboard.py  test_db.py  test_db_close.py  test_enroll_endpoint.py  test_errors.py  test_gate_policy.py  test_hub.py  test_identity.py  test_isolation_group_c.py  test_keys_endpoint.py  test_migrations.py  test_notify.py  test_notify_dedupe.py  test_obslog.py  test_open_cell.py  test_ops.py  test_outbox.py  test_outbox_drain_scope.py  (+31 more)
server/tests/isolation/: conftest.py  test_backup_restore.py  test_cross_cell_read.py  test_disable_teardown.py  test_egress_isolation.py  test_forged_route.py  test_gate_manifest.py  test_harness.py  test_keys_eviction_race.py  test_outbox_idempotency.py  test_rate_limit_isolation.py  test_refcount.py  test_rotation_anchor.py  test_scheduler_durability.py  test_scheduler_fairness.py  test_scheduler_signing.py  test_shared_dir.py  test_single_flight.py  test_stream_cap.py  test_stream_leak.py  test_verdict_tenant_binding.py  test_ws_routing.py
warden/: CHANGELOG.md  README.md  pyproject.toml
warden/hold_warden/: __init__.py  adapters.py  api.py  arbiter.py  canonical.py  cli.py  config.py  db.py  rotation_state.py  secrets.py  service.py  verdict.py
warden/tests/: test_adapters.py  test_api.py  test_arbiter_client.py  test_canonical.py  test_cli.py  test_config.py  test_db.py  test_docs.py  test_params.py  test_rotation.py  test_rotation_state.py  test_secrets.py  test_service.py  test_verdict.py
warden/tests/fakes/: bw  op  pass  rbw  vault
warden/tests/vectors/: command_simple.json  command_unicode.json  empty_params.json  http_nested.json  http_post.json  param_order.json  secret_release.json
(+3 files in other folders)
