[project]
name = "hold-sdk"
version = "0.4.0"
description = "Fail-closed approval client for Hold My Agent"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
]

# SDK tests exercise the client against the real server — install with: pip install -r requirements-dev.txt
[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.6"]

[project.urls]
Homepage = "https://holdmyagent.com"
Repository = "https://github.com/holdmyagent/arbiter"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hold_sdk*"]
