[project]
name = "holdmyagent"
version = "0.5.0"
description = "Self-hosted, fail-closed approval server for AI agents (Arbiter)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx[http2]>=0.27",
  "pyjwt[crypto]>=2.9",
  "pydantic>=2.9",
  "segno>=1.6",
  "jinja2>=3.1",
  "itsdangerous>=2.2",
  "python-multipart>=0.0.9",
  "tomlkit>=0.12",
  "click>=8.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.6"]

[project.scripts]
hma = "arbiter.cli:main"

[project.urls]
Homepage = "https://holdmyagent.com"
Repository = "https://github.com/holdmyagent/arbiter"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["arbiter*"]

[tool.setuptools.package-data]
arbiter = ["web/templates/*.html", "web/static/*"]
